--- a/webui/src/app/pages/clients/client_add/client_add.scss
+++ b/webui/src/app/pages/clients/client_add/client_add.scss
@@ -1,7 +1,7 @@
 @import '../../../../assets/scss/var';
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 h4{margin-top: 16px;}
-.s-graphite-dash-pg {
+.s-client-dash-pg {
   margin: 0px;
   display:flex;
   flex-wrap:wrap;
