--- a/webui/src/app/home.scss
+++ b/webui/src/app/home.scss
@@ -1,3 +1,6 @@
 @import '../assets/scss/var';
 @import "~normalize.css/normalize.css";
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+.mat-button-focus-overlay {
+  background-color:transparent !important;
+}
