--- a/webui/src/app/pages/nomenclatures/fidelity_groups/fidelity_groups.component.html
+++ b/webui/src/app/pages/nomenclatures/fidelity_groups/fidelity_groups.component.html
@@ -20,7 +20,7 @@
     <div (click)="delete(row.id)" class="d-flex justify-content-center btn btn-sm btn-outline-secondary">
         <clr-icon shape="trash" class="is-error"></clr-icon>
     </div>
-    <div (click)="edit(row.id)" class="d-flex justify-content-center btn btn-sm btn-outline-secondary">
+    <div (click)="edit(row)" class="d-flex justify-content-center btn btn-sm btn-outline-secondary">
         <clr-icon shape="edit"  class="is-info"></clr-icon>
     </div>
 </ng-template>
